# MashtaGesturalControl

./: CMakeLists.txt  README.md  Readme.txt
cmake/: AddQtApp.cmake  FindCoreServices.cmake  FindFFmpeg.cmake  FindMacPorts.cmake  FindOpenNI.cmake  qt.cmake
doc/: Fubi.dxy  GenerateDoc.bat  doc.css
include/oscpkt/: oscpkt.hh  udp.hh
src/: FUBI.icns
src/FUBIforMashtaCycle/: FUBIforMashtaCycle_main.cpp  MappingMashtaCycle.cpp  MappingMashtaCycle.h
src/Fubi/: Fubi.cpp  Fubi.h  FubiConfig.h  FubiCore.cpp  FubiCore.h  FubiISensor.h  FubiImageProcessing.cpp  FubiImageProcessing.h  FubiKinectSDKSensor.cpp  FubiKinectSDKSensor.h  FubiOpenNI2Sensor.cpp  FubiOpenNI2Sensor.h  FubiOpenNISensor.cpp  FubiOpenNISensor.h  FubiPredefinedGestures.h  FubiRecognizerFactory.cpp  FubiRecognizerFactory.h  FubiUser.cpp  FubiUser.h  FubiUtils.cpp  FubiUtils.h  Readme.txt
src/Fubi/GestureRecognizer/: ArmsCrossedRecognizer.cpp  ArmsCrossedRecognizer.h  ArmsDownTogetherRecognizer.cpp  ArmsDownTogetherRecognizer.h  ArmsNearPocketsRecognizer.cpp  ArmsNearPocketsRecognizer.h  CombinationRecognizer.cpp  CombinationRecognizer.h  FingerCountRecognizer.cpp  FingerCountRecognizer.h  HandsFrontTogetherRecognizer.cpp  HandsFrontTogetherRecognizer.h  IGestureRecognizer.h  JointOrientationRecognizer.cpp  JointOrientationRecognizer.h  JointRelationRecognizer.cpp  JointRelationRecognizer.h  LeftHandCloseToArmRecognizer.cpp  LeftHandCloseToArmRecognizer.h  LeftHandOutRecognizer.cpp  LeftHandOutRecognizer.h  LeftHandOverHeadRecognizer.cpp  LeftHandOverHeadRecognizer.h  LeftHandUpRecognizer.cpp  LeftHandUpRecognizer.h  LeftKneeUpRecognizer.cpp  LeftKneeUpRecognizer.h  LinearMovementRecognizer.cpp  LinearMovementRecognizer.h  RightHandCloseToArmRecognizer.cpp  RightHandCloseToArmRecognizer.h  RightHandLeftOfShoulderRecognizer.cpp  RightHandLeftOfShoulderRecognizer.h  RightHandOutRecognizer.cpp  RightHandOutRecognizer.h  RightHandOverHeadRecognizer.cpp  RightHandOverHeadRecognizer.h  RightHandPointingRecognizer.cpp  RightHandPointingRecognizer.h  RightHandRightOfShoulderRecognizer.cpp  (+5 more)
