# CMake integration by Christian Frisson (UMONS)

# Project settings
PROJECT(FUBI)
SET(FUBI_VERSION 0.7)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DFUBI_VERSION=${FUBI_VERSION}")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DFUBI_VERSION=${FUBI_VERSION}")

cmake_minimum_required(VERSION 2.6.2)

list(APPEND CMAKE_MODULE_PATHS "${CMAKE_SOURCE_DIR}/cmake")
INCLUDE(${CMAKE_SOURCE_DIR}/cmake/FindLinkedDirectories.cmake)
SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATHS}")

# Ubuntu detection
IF(UNIX)
	# Try to find architecture
	execute_process(COMMAND uname -m OUTPUT_VARIABLE CPACK_PACKAGE_ARCHITECTURE)
	string(STRIP "${CPACK_PACKAGE_ARCHITECTURE}" CPACK_PACKAGE_ARCHITECTURE)
	# Try to find distro name and distro-specific arch
	execute_process(COMMAND lsb_release -is OUTPUT_VARIABLE LSB_ID)
	execute_process(COMMAND lsb_release -rs OUTPUT_VARIABLE LSB_RELEASE)
	string(STRIP "${LSB_ID}" LSB_ID)
	string(STRIP "${LSB_RELEASE}" LSB_RELEASE)
	set(LSB_DISTRIB "${LSB_ID}${LSB_RELEASE}")
	IF(NOT LSB_DISTRIB)
		set(LSB_DISTRIB "unix")
	ENDIF(NOT LSB_DISTRIB)
ENDIF()

# Apple architectures
IF(APPLE AND NOT APPLE_IOS_XCODE AND NOT APPLE_IOS_SIM AND NOT APPLE_IOS_XCODE)
	FIND_PACKAGE(MacPorts)
	IF(MACPORTS_FOUND)
		IF(MACPORTS_UNIVERSAL_FLAG_SET)
			SET(CMAKE_OSX_ARCHITECTURES "${MACPORTS_UNIVERSAL_ARCHS}" CACHE STRING "Building with MacPorts for ${MACPORTS_UNIVERSAL_ARCHS}" FORCE)
		ELSE()
			SET(CMAKE_OSX_ARCHITECTURES "${MACPORTS_BUILD_ARCH}" CACHE STRING "Building with MacPorts for ${MACPORTS_BUILD_ARCH}" FORCE)
		ENDIF()
	ELSE()
		MESSAGE(FATAL_ERROR "Building google-breakpad for x86_64 might not work, it is currently detected through MacPorts that is not installed")
		IF(${CMAKE_SYSTEM_VERSION} GREATER "9.") # Mac OS X 10.6 and above
			SET(CMAKE_OSX_ARCHITECTURES "x86_64" CACHE STRING "Building for x86_64" FORCE)
		ELSE()
			SET(CMAKE_OSX_ARCHITECTURES "i386" CACHE STRING "Building for i386 (FFmpeg and QTKit support currently broken on Snow Leopard)" FORCE)
		ENDIF()
	ENDIF()
ENDIF()

OPTION(USE_DEBUG "Use Debug" ON)
OPTION(BUILD_SHARED_LIBS "Build libraries as shared" ON)

IF ( USE_DEBUG )
	MESSAGE( "\nConfigured for Debug Build")
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DUSE_DEBUG -DTI_DEBUG=1 -g")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_DEBUG -DTI_DEBUG=1 -g")
	SET(CMAKE_BUILD_TYPE "Debug")
	SET(CMAKE_VERBOSE_MAKEFILE ON)
ELSE ( USE_DEBUG )
	MESSAGE( "\nConfigured for Release Build")
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DTI_DEBUG=0 -O3")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DTI_DEBUG=0 -O3")
	SET(CMAKE_BUILD_TYPE "Release")
	SET(CMAKE_VERBOSE_MAKEFILE OFF)
	IF(APPLE)
		SET(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/release")
	ENDIF()
ENDIF ( USE_DEBUG )

# Dependencies
OPTION(USE_OPENNI1 "Use OpenNI 1.x" ON)
OPTION(USE_OPENNI2 "Use OpenNI 2.x" ON)
OPTION(USE_OPENCV "Use OpenCV" ON)
OPTION(USE_BREAKPAD "Use breakpad" ON)
OPTION(USE_QT4 "Use Qt4" OFF)
OPTION(USE_FFMPEG "Use FFmpeg" ON)

# Apple
IF(APPLE)
	FIND_PACKAGE(CoreFoundation)
	IF(COREFOUNDATION_FOUND)
		MESSAGE("CoreFoundation found: ${COREFOUNDATION_LIBRARY}")
	ELSE()
		MESSAGE("CoreFoundation not found")
	ENDIF()
	FIND_PACKAGE(CoreServices)
	IF(CORESERVICES_FOUND)
		MESSAGE("CoreServices found: ${CORESERVICES_LIBRARY}")
	ELSE()
		MESSAGE("CoreServices not found")
	ENDIF()
ENDIF()

# OpenGL
FIND_PACKAGE( OpenGL REQUIRED )
IF ( OPENGL_FOUND )
	MESSAGE ( "Found OpenGL: ${OPENGL_LIBRARIES}" )
	INCLUDE_DIRECTORIES( ${OPENGL_INCLUDE_DIR} )
ELSE ( OPENGL_FOUND )
	MESSAGE(FATAL_ERROR "OpenGL not found.")
ENDIF ( OPENGL_FOUND )

# GLUT
FIND_PACKAGE( GLUT )
IF ( GLUT_FOUND )
	MESSAGE ( "Found GLUT: ${GLUT_LIBRARIES}" )
	INCLUDE_DIRECTORIES( ${GLUT_INCLUDE_DIR} )
ELSE ( GLUT_FOUND )
	MESSAGE(FATAL_ERROR "GLUT not found.")
ENDIF ( GLUT_FOUND )

# OpenNI
IF(WIN32)
	OPTION(USE_KINECTSDK "Use Microsoft Kinect SDK" ON)
	IF(USE_KINECTSDK)
		ADD_DEFINITIONS(-DUSE_KINECT_SDK)
	ENDIF()
ENDIF()
IF(USE_OPENNI1 OR USE_OPENNI2)
	FIND_PACKAGE(OpenNI REQUIRED)
	IF(OPENNI_FOUND)
		INCLUDE_DIRECTORIES(${OPENNI_INCLUDE_DIR})
		MESSAGE("Found OpenNI version ${OPENNI_VERSION}: ${OPENNI_LIBRARIES} in ${OPENNI_INCLUDE_DIR}")
		IF(${OPENNI_VERSION_MAJOR} GREATER 1)
			MESSAGE("Using USE_OPENNI2 definition")
			SET(USE_OPENNI1 OFF)
			ADD_DEFINITIONS(-DUSE_OPENNI2)
		ELSEIF(${OPENNI_VERSION_MAJOR} MATCHES 1)
			MESSAGE("Using USE_OPENNI1 definition")
			SET(USE_OPENNI2 OFF)
			ADD_DEFINITIONS(-DUSE_OPENNI1)
		ELSE()
			MESSAGE(FATAL_ERROR "Couldn't determine the OpenNI version")
		ENDIF()
	ELSE()
		IF("${LSB_DISTRIB}" MATCHES "Ubuntu")
			MESSAGE(FATAL_ERROR "Couldn't find OpenNI.\nPlease install it by entering the following command lines on a terminal:\nsudo add-apt-repository ppa:v-launchpad-jochen-sprickerhof-de/pcl\nsudo apt-get update\nsudo apt-get install libopenni-dev")
		ELSE()
			MESSAGE(FATAL_ERROR "Couldn't find OpenNI")
		ENDIF()
	ENDIF()
ENDIF()

# NiTE
IF(USE_OPENNI2)
IF(${OPENNI_VERSION_MAJOR} GREATER 1)
	FIND_PACKAGE(NiTE REQUIRED)
	IF(NITE_FOUND)
		INCLUDE_DIRECTORIES(${NITE_INCLUDE_DIR})
		MESSAGE("Found NiTE: ${NITE_LIBRARIES} in ${NITE_INCLUDE_DIR}")
	ELSE()
		MESSAGE(FATAL_ERROR "Couldn't find NiTE, required for OpenNI 2.x support")
	ENDIF()
ELSE()
	SET(USE_OPENNI2 OFF)
ENDIF()
ENDIF()

# FFmpeg
IF(USE_FFMPEG)
    FIND_PACKAGE( FFmpeg )
    MESSAGE("Looking for FFmpeg libraries:")
    MESSAGE("  avformat library: ${FFMPEG_LIBAVFORMAT_FOUND} ${FFMPEG_LIBAVFORMAT_LIBRARIES}")
    MESSAGE("  avdevice library: ${FFMPEG_LIBAVDEVICE_FOUND} ${FFMPEG_LIBAVDEVICE_LIBRARIES}")
    MESSAGE("  avcodec library: ${FFMPEG_LIBAVCODEC_FOUND} ${FFMPEG_LIBAVCODEC_LIBRARIES}")
    MESSAGE("  avfilter library: ${FFMPEG_LIBAVFILTER_FOUND} ${FFMPEG_LIBAVFILTER_LIBRARIES}")
    MESSAGE("  avutil library: ${FFMPEG_LIBAVUTIL_FOUND} ${FFMPEG_LIBAVUTIL_LIBRARIES}")
    MESSAGE("  swscale library: ${FFMPEG_LIBSWSCALE_FOUND} ${FFMPEG_LIBSWSCALE_LIBRARIES}")
    MESSAGE("  swresample library: ${FFMPEG_LIBSWRESAMPLE_FOUND} ${FFMPEG_LIBSWRESAMPLE_LIBRARIES}")
    IF(FFMPEG_FOUND)
	INCLUDE_DIRECTORIES(${FFMPEG_INCLUDE_DIR} ${FFMPEG_INCLUDE_DIRS})

	ADD_LIB_LINKED_DIR(${FFMPEG_LIBAVFORMAT_LIBRARIES})
	ADD_LIB_LINKED_DIR(${FFMPEG_LIBAVDEVICE_LIBRARIES})
	ADD_LIB_LINKED_DIR(${FFMPEG_LIBAVCODEC_LIBRARIES})
	ADD_LIB_LINKED_DIR(${FFMPEG_LIBAVUTIL_LIBRARIES})
	ADD_LIB_LINKED_DIR(${FFMPEG_LIBSWSCALE_LIBRARIES})
       #ADD_LIB_LINKED_DIR(${FFMPEG_LIBSWRESAMPLE_LIBRARIES})

	IF(MINGW AND CMAKE_TOOLCHAIN_FILE)
		PKG_CHECK_MODULES (FFMPEG_PKG REQUIRED libavformat libavdevice libavcodec libavfilter libavutil libswscale libswresample)
		IF (FFMPEG_PKG_FOUND)
			MESSAGE( "FFmpeg cflags found through pkg-config: ${FFMPEG_PKG_CFLAGS}" )
			MESSAGE( "FFmpeg ldflags found through pkg-config: ${FFMPEG_PKG_LDFLAGS}" )
                        IF(USE_DEBUG)
                            STRING (REPLACE "-mwindows;" "" FFMPEG_PKG_LDFLAGS "${FFMPEG_PKG_LDFLAGS}")
                        ENDIF()
			STRING(REGEX REPLACE ";" " " FFMPEG_CFLAGS "${FFMPEG_PKG_CFLAGS}")
			SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${FFMPEG_CFLAGS}")
			SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${FFMPEG_CFLAGS}")
			LIST(APPEND FFMPEG_LIBRARIES ${FFMPEG_PKG_LDFLAGS})
		ELSE (FFMPEG_PKG_FOUND)
			MESSAGE( FATAL_ERROR "FFmpeg cflags/ldflags not found through pkg-config." )
		ENDIF (FFMPEG_PKG_FOUND)
	ENDIF()
	MESSAGE("Found all FFmpeg libraries in ${FFMPEG_LIBRARIES}.")
    ELSE()
        MESSAGE(FATAL_ERROR "Some FFmpeg libraries are missing.")
    ENDIF()
    IF(CMAKE_COMPILER_IS_GNUCXX)
        # Remove -pedantic flag as it barfs on ffmpeg headers
        STRING(REGEX REPLACE "-pedantic" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
    ENDIF()
ENDIF()

# OpenCV
SET(OpenCV_MIN_VERSION "2.3.1")
IF(USE_OPENCV)
	#SET(OpenCV_CONFIG_PATH "${OpenCV_DIR}")
	find_path(OpenCV_DIR NAMES opencv-config.cmake OpenCVConfig.cmake PATH_SUFFIXES lib/cmake lib)
	FIND_PACKAGE ( OpenCV REQUIRED COMPONENTS core contrib features2d imgproc legacy objdetect video highgui)
	IF(OpenCV_FOUND)
		IF(${OpenCV_VERSION} VERSION_LESS ${OpenCV_MIN_VERSION} AND (SUPPORT_VIDEO OR SUPPORT_IMAGE) )
			MESSAGE(FATAL_ERROR "OpenCV version (${OpenCV_VERSION} is present, while ${OpenCV_MIN_VERSION}+ is required")
		ENDIF()
		INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

		IF(MINGW OR WIN32)
			SET(OpenCV_LIBRARIES ${OpenCV_LIBS_OPT} ${OpenCV_EXTRA_LIBS_OPT})
		ELSE()
			SET(OpenCV_LIBRARIES ${OpenCV_LIBS})
		ENDIF()

		MESSAGE("Found OpenCV ${OpenCV_VERSION} libraries ${OpenCV_LIBRARIES} and headers ${OpenCV_INCLUDE_DIRS}")
		IF(${OpenCV_VERSION_MAJOR} MATCHES 2 AND ${OpenCV_VERSION_MINOR} MATCHES 2)
			ADD_DEFINITIONS(-DUSE_OPENCV22)
		ELSE()
			ADD_DEFINITIONS(-DUSE_OPENCV)
		ENDIF()
	ELSE()
		MESSAGE(FATAL_ERROR "OpenCV not found.")
	ENDIF()
ENDIF()

# Qt
IF ( USE_QT4 )
	FIND_PACKAGE ( Qt4 4.6.0 COMPONENTS QtCore QtGui QtOpenGL QtXml QtSvg QtNetwork REQUIRED)
	IF (QT4_FOUND AND QT_QTCORE_FOUND AND QT_QTGUI_FOUND AND QT_QTOPENGL_FOUND AND QT_QTXML_FOUND AND QT_QTSVG_FOUND)
		MESSAGE("Qt version: ${QTVERSION}")

		INCLUDE (${QT_USE_FILE})
		MESSAGE( "Qt4 found in ${QT_LIBRARY_DIRS}: libraries ${QT_LIBRARIES} and headers ${QT_INCLUDE_DIR}" )

		IF(MINGW)
			ADD_DEFINITIONS(-DQT_STATIC)
			IF(MINGW AND CMAKE_TOOLCHAIN_FILE) # OR APPLE_IOS_XCODE OR APPLE_IOS_DEV OR APPLE_IOS_SIM
				MESSAGE( "PkgConfig found: ${PKG_CONFIG_EXECUTABLE}" )
				set(ENV{PKG_CONFIG_PATH} ${CMAKE_FIND_ROOT_PATH}/lib/pkgconfig;${CMAKE_FIND_ROOT_PATH}/qt/lib/pkgconfig)
				set(PKG_CONFIG_PATH ${CMAKE_FIND_ROOT_PATH}/lib/pkgconfig;${CMAKE_FIND_ROOT_PATH}/qt/lib/pkgconfig)
				#MESSAGE("PKG_CONFIG_PATH ${PKG_CONFIG_PATH}")
				PKG_CHECK_MODULES (QT_PKG QtCore QtGui QtOpenGL QtXml QtSvg QtNetwork)
				IF (QT_PKG_FOUND)
					MESSAGE( "Qt cflags found through pkg-config: ${QT_PKG_CFLAGS}" )
					MESSAGE( "Qt ldflags found through pkg-config: ${QT_PKG_LDFLAGS}")
					STRING(REGEX REPLACE ";" " " QT_CFLAGS "${QT_PKG_CFLAGS}")
					SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${QT_CFLAGS}")
					SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${QT_CFLAGS}")
					LIST(APPEND QT_LIBRARIES ${QT_PKG_LDFLAGS})
					MESSAGE("Qt libraries: ${QT_LIBRARIES}")
				#ELSE (QT_PKG_FOUND)
				#	MESSAGE( FATAL_ERROR "Qt cflags/ldflags not found through pkg-config." )
				ENDIF (QT_PKG_FOUND)
				include(qt)
				mxe_prepare_qt4(QtGui QtCore QtGui QtOpenGL QtXml QtSvg QtNetwork)
			ENDIF()
		ELSE ( MINGW )
			ADD_DEFINITIONS(-DQT_DLL)
			ADD_DEFINITIONS(-DQT_THREAD_SUPPORT)
		ENDIF ( MINGW )

		foreach(DIR ${QT_LIBRARY_DIRS})
			ADD_LINKED_DIRECTORY(${DIR})
		endforeach(DIR)

		IF(OpenCV_WITH_Qt)
			MESSAGE("Appending Qt libs to OpenCV: ")
			LIST(APPEND OpenCV_LIBRARIES ${QT_LIBRARIES})
			MESSAGE("${OpenCV_LIBRARIES}")
		ENDIF()

	ELSE()
		MESSAGE(FATAL_ERROR "Qt4 not found or not complete (phonon might be missing).")
	ENDIF()
ENDIF ( USE_QT4 )

# Google Breakpad crash reporter wrapped with Qt
IF(USE_BREAKPAD AND USE_QT4)
       	IF(MINGW AND CMAKE_TOOLCHAIN_FILE)
		PKG_CHECK_MODULES (OPENSSLPKG REQUIRED openssl)
		IF (OPENSSLPKG_FOUND)
			MESSAGE( "OPENSSL cflags found through pkg-config: ${OPENSSLPKG_CFLAGS}" )
			MESSAGE( "OPENSSL ldflags found through pkg-config: ${OPENSSLPKG_LDFLAGS}" )
			STRING(REGEX REPLACE ";" " " OPENSSL_CFLAGS "${OPENSSLPKG_CFLAGS}")
			SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OPENSSL_CFLAGS}")
			SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OPENSSL_CFLAGS}")
			SET(OPENSSL_LIBRARIES ${OPENSSLPKG_LDFLAGS})
			MESSAGE("OPENSSL_LIBRARIES ${OPENSSL_LIBRARIES}")
		ELSE (OPENSSLPKG_FOUND)
			MESSAGE( FATAL_ERROR "FreeType cflags/ldflags not found through pkg-config." )
		ENDIF (OPENSSLPKG_FOUND)
	ELSE()
		FIND_PACKAGE(OpenSSL REQUIRED)
	ENDIF()
        IF(OPENSSL_FOUND OR OPENSSLPKG_FOUND)
		MESSAGE("Found OpenSSL: ${OPENSSL_LIBRARIES}")
	ELSE()
		MESSAGE(FATAL_ERROR "Couldn't find OpenSSL, required for breakpad-qt")
	ENDIF()
	add_definitions(-DUSE_BREAKPAD)
	INCLUDE_DIRECTORIES(3rdparty/breakpad-qt/handler 3rdparty/breakpad-qt/sender)
	add_subdirectory(3rdparty)
ENDIF()

MESSAGE("\nConfiguration:")
IF(USE_OPENNI1)
	MESSAGE("[X] with OpenNI 1.x support")
ELSE()
	MESSAGE("[ ] with OpenNI 1.x support")
ENDIF()
IF(USE_OPENNI2)
	MESSAGE("[X] with OpenNI 2.x support")
ELSE()
	MESSAGE("[ ] with OpenNI 2.x support")
ENDIF()
IF(USE_OPENCV)
	MESSAGE("[X] with OpenCV support")
ELSE()
	MESSAGE("[ ] with OpenCV support")
ENDIF()

# Project library and executables
MESSAGE("\nTargets:")
SET(LIBRARY_NAME "FUBI")
#IF(OPENNI_FOUND)# AND NITE_FOUND)

	#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}-std=c++0x")
	#SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c++0x")

	INCLUDE_DIRECTORIES(Fubi Fubi/GestureRecognizer include)

	FILE(GLOB ${LIBRARY_NAME}_SRCS Fubi/*.cpp Fubi/GestureRecognizer/*.cpp)
	FILE(GLOB ${LIBRARY_NAME}_HDRS Fubi/*.h Fubi/GestureRecognizer/*.h)

	ADD_LIBRARY(${LIBRARY_NAME} ${${LIBRARY_NAME}_SRCS} ${${LIBRARY_NAME}_HDRS})
	TARGET_LINK_LIBRARIES(${LIBRARY_NAME} )
	IF(OPENNI_FOUND)
		TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${OPENNI_LIBRARIES})
	ENDIF()
		IF(NITE_FOUND)
		TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${NITE_LIBRARIES})
	ENDIF()
	IF(OpenCV_FOUND)
		TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${OpenCV_LIBRARIES})
	ENDIF()

	MESSAGE("[X] ${LIBRARY_NAME}")

	SET(EXECUTABLE_NAME "FUBIOSC")
	IF(GLUT_FOUND)

		SET(ICON_NAME "FUBI")

		IF ( WIN32 OR MINGW)
			EXECUTE_PROCESS(COMMAND echo "IDI_ICON1	ICON	DISCARDABLE \"${CMAKE_SOURCE_DIR}/${ICON_NAME}.ico\"" OUTPUT_FILE ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_NAME}.rc)
			#EXECUTE_PROCESS(COMMAND ${QT_RC_EXECUTABLE} -I${CMAKE_CURRENT_SOURCE_DIR} -i${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.rc 
                        #     -o ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.o)
			SET(OS_SPECIFIC "WIN32")# ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.o)
		ELSE ()
			IF ( APPLE )
				SET(APP_TYPE MACOSX_BUNDLE)
				SET(MACOSX_BUNDLE_BUNDLE_NAME ${EXECUTABLE_NAME})
				# set how it shows up in the Info.plist file
                        	SET(MACOSX_BUNDLE_ICON_FILE ${ICON_NAME}.icns)
                        	# set the bundle identifier (REQUIRED, or some strange GUI bugs may appear)
                        	SET(MACOSX_BUNDLE_GUI_IDENTIFIER "org.numediart.${EXECUTABLE_NAME}")
                        	SET(MACOSX_BUNDLE_INFO_STRING "${EXECUTABLE_NAME}")
                        	SET(MACOSX_BUNDLE_LONG_VERSION_STRING "${EXECUTABLE_NAME}")
                        	SET(MACOSX_BUNDLE_SHORT_VERSION_STRING "${EXECUTABLE_NAME}")
                        	SET(MACOSX_BUNDLE_BUNDLE_VERSION "${${PROJECT_NAME}_VERSION}")
                        	SET(MACOSX_BUNDLE_COPYRIGHT "Copyright 2010-2013 Felix Kistler, Christian Frisson, Fabien Grisard")
  				# set where in the bundle to put the icns file
  				SET_SOURCE_FILES_PROPERTIES(${CMAKE_SOURCE_DIR}/${ICON_NAME}.icns PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
  				# include the icns file in the target
  				SET(SRC_TOTAL ${SRC_TOTAL} ${CMAKE_SOURCE_DIR}/${ICON_NAME}.icns)
				SET(OS_SPECIFIC ${APP_TYPE} ${MACOSX_BUNDLE_INFO_PLIST})
			ENDIF()
		ENDIF()

		INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Samples/MashataCycle/)
		ADD_EXECUTABLE(${EXECUTABLE_NAME} ${OS_SPECIFIC} ${SRC_TOTAL} Samples/MashataCycle/MashtaCycle_main.cpp Samples/MashataCycle/MappingMashtaCycle.h Samples/MashataCycle/MappingMashtaCycle.cpp)
		ADD_DEPENDENCIES(${EXECUTABLE_NAME} ${LIBRARY_NAME})
		TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${LIBRARY_NAME} ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
		
		IF(APPLE AND NOT USE_DEBUG)
			# Install the files wherever suitable
			FILE(GLOB XML_FILES ${CMAKE_CURRENT_SOURCE_DIR}/bin/*.xml)
			foreach(XML_FILE ${XML_FILES})
				INSTALL(PROGRAMS "${XML_FILE}" DESTINATION ${EXECUTABLE_NAME}.app/Contents/MacOS COMPONENT ${EXECUTABLE_NAME})
			endforeach(XML_FILE)
			FILE(GLOB DTD_FILES ${CMAKE_CURRENT_SOURCE_DIR}/bin/*.dtd)
			foreach(DTD_FILE ${DTD_FILES})
				INSTALL(PROGRAMS "${DTD_FILE}" DESTINATION ${EXECUTABLE_NAME}.app/Contents/MacOS COMPONENT ${EXECUTABLE_NAME})
			endforeach(DTD_FILE)
		ELSEIF(APPLE AND USE_DEBUG AND XCODE)
			ADD_CUSTOM_COMMAND(
				COMMAND   cp
				ARGS      ${CMAKE_CURRENT_SOURCE_DIR}/bin/*.xml ${CMAKE_BINARY_DIR}/Debug
				TARGET    ${EXECUTABLE_NAME}
			)

			#EXEC_PROGRAM(cp ARGS "${CMAKE_CURRENT_SOURCE_DIR}/bin/*.xml ${CMAKE_BINARY_DIR}/Debug" OUTPUT_VARIABLE FUBI_XML_OUT RESULT_VARIABLE FUBI_XML_RES)
		ELSE()
			# Copy the XML files to the current binary dir
			EXEC_PROGRAM(cp ARGS "${CMAKE_CURRENT_SOURCE_DIR}/bin/*.xml ${CMAKE_CURRENT_BINARY_DIR}" OUTPUT_VARIABLE FUBI_XML_OUT RESULT_VARIABLE FUBI_XML_RES)
		ENDIF()

		IF(NOT USE_DEBUG)
			include(${CMAKE_SOURCE_DIR}/cmake/CreatePackage.cmake)
		ENDIF()

		MESSAGE("[X] ${EXECUTABLE_NAME}")
	ELSE()
		MESSAGE("[ ] ${EXECUTABLE_NAME}")
	ENDIF()

#ELSE()
#	MESSAGE("[ ] ${LIBRARY_NAME}")
#ENDIF()

add_subdirectory(tests)
